Fix bug where nav items wrapped individually if they couldn’t fit

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -276,10 +276,18 @@ sup {
 // Put items in the navigation next to each other, with one em of space between
 // each other.
 .page-nav ul {
-  display: flex;
-}
-.page-nav ul li + li {
-  margin-left: 1em;
+  display: inline-flex;
+  flex-wrap: wrap;
+
+  // We remove space on the last item instead of using li + li because, if we
+  // use that wrapped items are indented due to the use of margin-left.
+  li {
+    margin-right: 1em;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
 
 // Make the navigation section less prominent
